--- a/docs/src/docs/asciidoc/software-catalog.adoc
+++ b/docs/src/docs/asciidoc/software-catalog.adoc
@@ -1,11 +1,13 @@
 = Software Catalog Application
 Thorsten Nuß <info@gmail.com>
 :revnumber: {project-version}
-ifndef::imagesdir[:imagesdir: images]
-ifndef::sourcedir[:sourcedir: ../java]
-:toc: left
+:revdate: {project-date}
 
-include::overview.adoc[leveloffset=1]
-include::installation.adoc[leveloffset=1]
-include::architecture.adoc[leveloffset=1]
-include::qa.adoc[leveloffset=1]
+include::overview.adoc[leveloffset=+1]
+// Page break
+<<<
+include::installation.adoc[leveloffset=+1]
+<<<
+include::architecture.adoc[leveloffset=+1]
+<<<
+include::qa.adoc[leveloffset=+1]
